# observability-watchdog

./: .env.example  .env.local.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  prompts.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_webhook_alert_fk.py
app/: config.py  main.py
app/api/: deps.py
app/core/: ai_cache.py  analysis_lock.py  datetime_utils.py  exceptions.py  http_client.py  logging.py  metrics.py  rate_limit.py  url_safety.py  webhook_signing.py
app/db/: migrations.py
app/middleware/: auth.py  security.py
app/models/: db.py  domain.py
app/repositories/: alert.py  log.py  log_repository.py  metrics.py  webhook.py
app/services/: alert_service.py  analysis_service.py  ingestion_service.py  log_parsers.py  log_source_service.py  metrics_service.py  webhook_service.py
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  styles.css
data/samples/: error_spike.json  normal_traffic.json
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  INGESTION.md  SUBMISSION_CHECKLIST.md  TROUBLESHOOTING.md  VIBE_CODING.md
docs/images/: README.md
scripts/: check_secrets.py  ci_docker_smoke.py  generate_samples.py  generate_upload_test_log.py  log_collector.py  mock_webhook.py  run_demo.py  seed_sample_logs.py  smoke_test.py
tests/: conftest.py
tests/integration/: test_alert_lifecycle.py  test_analyze_flow.py  test_concurrent_analysis.py  test_hybrid_analysis.py  test_log_sources.py  test_migrations.py  (+1 more)
(+32 files in other folders)
