[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "observability-watchdog"
version = "1.0.0"
description = "Intelligent Observability & Event Watchdog for Wolters Kluwer assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "redis>=5.0.0",
]
redis = [
    "redis>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.main"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.api.v1.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.core.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.services.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.middleware.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.api.deps"
disallow_untyped_defs = false
